--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Basic Style */
 body {
     background-color: #f8f8f8;
     color: #333;
@@ -13,7 +12,7 @@ body {
 .header img {
     width: 100%;
 }
-.header .more_inf {
+.header_link{
     font-family: "fantasy", sans-serif;
     font-style: oblique;
 }
@@ -25,19 +24,36 @@ body {
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
+    margin: 0;
+    font-size: 18px;
+    line-height: 18px;
+    height: 21px;
+    padding: 0 9px;
+    border: 1px solid #ddd;
+    background: #fff;
+    border-radius: 6px;
+    color: #888;
+}
+
+.task:focus {
+    color: #333;
 }
 .task-row-wrapper {
     display: flex;
 }
+
 ul {
     margin:0;
     padding: 0px;
 }
-li, h3 {
+
+li,
+h3 {
     list-style:none;
 }
-input,button{
+input,
+button{
     outline:none;
 }
 button {
@@ -62,28 +78,13 @@ label[for='new-task'] {
     margin: 0;
     text-transform: uppercase;
 }
-input[type="text"] {
-    margin: 0;
-    font-size: 18px;
-    line-height: 18px;
-    height: 21px;
-    padding: 0 9px;
-    border: 1px solid #dDd;
-    background: #FFF;
-    border-radius: 6px;
-    font-family: 'Lato', sans-serif;
-    color: #888;
-}
-input[type="text"]:focus {
-    color: #333;
-}
 
 /* New Task */
 label[for='new-task'] {
     display: block;
     margin: 0 0 20px;
 }
-input#new-task {
+ #new-task {
     width: 318px;
 }
 
@@ -91,17 +92,13 @@ input#new-task {
 li {
     overflow: hidden;
     padding: 20px 0;
-    border-bottom: 1px solid #eee;
-
+    border-bottom:1px solid #eee;
+    vertical-align: middle;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-li > * {
-    vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.checkbox{
     margin: 0 10px;
 }
 li > label {
@@ -111,38 +108,43 @@ li > label {
     width: 226px;
 }
 li >    input[type="text"] {
-    width: 226px
+    width: 226px;
 }
-button.delete img {
+.delete-icon{
     height: 2em;
     transform: rotateZ(45deg);
-    transition: transform 200ms ease-in;
+    transition:all 200ms ease-in;
 }
-button.delete img:hover {
+.delete-icon:hover {
     transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks label {
     text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-    display:none
+    display:none;
 }
 
-ul li.editMode input[type=text] {
+ .editMode input[type=text] {
     display:inline-block;
-    width:224px
+    width:224px;
 }
 
-ul li.editMode label {
+ul
+li.editMode
+label {
     display:none;
 }
 
 @media (max-width:768px) {
-    .header { text-align: center;
+
+    .header {
+        text-align: center;
     }
-    }
+
+}
